# xlsx2txt

./: CMakeLists.txt  WinMain.cpp  make_visual_studio_project_files.py
Game/: CMakeLists.txt  GameMain.cpp  GameMain.h
Kamilo/: CApp.cpp  CApp.h  CController.cpp  CController.h  CMakeLists.txt  CMake_heliodor.txt  COutline.cpp  COutline.h  KAction.h  KAnimation.cpp  KAnimation.h  KAny.cpp  KAny.h  KAudioPlayer.cpp  KAudioPlayer.h  KAutoHideCursor.cpp  KAutoHideCursor.h  KCamera.cpp  KCamera.h  KChunkedFile.cpp  KChunkedFile.h  KClipboard.cpp  KClipboard.h  KClock.cpp  KClock.h  KCollisionShape.cpp  KCollisionShape.h  KColor.cpp  KColor.h  KCrashReport.cpp  KCrashReport.h  KCrc32.cpp  KCrc32.h  KDataGrid.cpp  KDataGrid.h  KDebug.h  KDialog.cpp  KDialog.h  KDirectoryWalker.cpp  KDirectoryWalker.h  (+123 more)
